tests/ui/traits/unsize-goal-escaping-bounds.current.stderr
error[E0277]: the trait bound `for<'a> (): Unsize<(dyn Trait + 'a)>` is not satisfied
  --> $DIR/unsize-goal-escaping-bounds.rs:20:5
   |
LL |     foo();
   |     ^^^^^ the trait `for<'a> Unsize<(dyn Trait + 'a)>` is not implemented for `()`
   |
   = note: all implementations of `Unsize` are provided automatically by the compiler, see <https://doc.rust-lang.org/stable/std/marker/trait.Unsize.html> for more information
note: required by a bound in `foo`
  --> $DIR/unsize-goal-escaping-bounds.rs:15:17
   |
LL | fn foo()
   |    --- required by a bound in this function
LL | where
LL |     for<'a> (): Unsize<dyn Trait + 'a>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
